[gd_scene load_steps=77 format=3 uid="uid://b02e7f0aescau"]

[ext_resource type="Script" path="res://scripts/undead_executioner.gd" id="1_hmdhw"]
[ext_resource type="Texture2D" uid="uid://dd8anl17p2770" path="res://assets/sprites/Undead executioner puppet/png/death.png" id="2_w2goq"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="2_yvcxr"]
[ext_resource type="Texture2D" uid="uid://c1gpmlqcwnlsq" path="res://assets/sprites/Undead executioner puppet/png/attacking.png" id="3_m0pj6"]
[ext_resource type="Texture2D" uid="uid://bj4fgtl0mrps0" path="res://assets/sprites/Undead executioner puppet/png/idle.png" id="4_05wls"]
[ext_resource type="Texture2D" uid="uid://dv2ygtitxtoxg" path="res://assets/sprites/Undead executioner puppet/png/idle2.png" id="5_wo8eh"]
[ext_resource type="Texture2D" uid="uid://dlt2nkhbp57es" path="res://assets/sprites/Undead executioner puppet/png/summon.png" id="6_4bfmi"]
[ext_resource type="Texture2D" uid="uid://bwisuuky14oue" path="res://assets/sprites/Undead executioner puppet/png/skill1.png" id="6_pswr8"]
[ext_resource type="Script" path="res://scenes/entities/Enemy/animated_sprite_2d.gd" id="8_20m8o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsh6"]
atlas = ExtResource("3_m0pj6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqg4"]
atlas = ExtResource("3_m0pj6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftwvo"]
atlas = ExtResource("3_m0pj6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrewe"]
atlas = ExtResource("3_m0pj6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l3jp"]
atlas = ExtResource("3_m0pj6")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_53f2f"]
atlas = ExtResource("3_m0pj6")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1maj"]
atlas = ExtResource("3_m0pj6")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk5mi"]
atlas = ExtResource("3_m0pj6")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3asa"]
atlas = ExtResource("3_m0pj6")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4cgj"]
atlas = ExtResource("3_m0pj6")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr7l5"]
atlas = ExtResource("3_m0pj6")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ocj1"]
atlas = ExtResource("3_m0pj6")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e07v"]
atlas = ExtResource("3_m0pj6")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m04ty"]
atlas = ExtResource("2_w2goq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u428p"]
atlas = ExtResource("2_w2goq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnx06"]
atlas = ExtResource("2_w2goq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rho2w"]
atlas = ExtResource("2_w2goq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3csd"]
atlas = ExtResource("2_w2goq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8jwx"]
atlas = ExtResource("2_w2goq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_25e2k"]
atlas = ExtResource("2_w2goq")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cspye"]
atlas = ExtResource("2_w2goq")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2a3u"]
atlas = ExtResource("2_w2goq")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1nba"]
atlas = ExtResource("2_w2goq")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_372fr"]
atlas = ExtResource("2_w2goq")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vo1m"]
atlas = ExtResource("2_w2goq")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj3tv"]
atlas = ExtResource("2_w2goq")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwt0c"]
atlas = ExtResource("2_w2goq")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eswps"]
atlas = ExtResource("2_w2goq")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqfwu"]
atlas = ExtResource("2_w2goq")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnvf5"]
atlas = ExtResource("2_w2goq")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_31da1"]
atlas = ExtResource("2_w2goq")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbmlx"]
atlas = ExtResource("2_w2goq")
region = Rect2(800, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_62ma8"]
atlas = ExtResource("4_05wls")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhnqs"]
atlas = ExtResource("4_05wls")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c015n"]
atlas = ExtResource("4_05wls")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tjae"]
atlas = ExtResource("4_05wls")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5va66"]
atlas = ExtResource("5_wo8eh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1vj6"]
atlas = ExtResource("5_wo8eh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qomn5"]
atlas = ExtResource("5_wo8eh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_68w0s"]
atlas = ExtResource("5_wo8eh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhd8a"]
atlas = ExtResource("5_wo8eh")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y52g"]
atlas = ExtResource("5_wo8eh")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kid7p"]
atlas = ExtResource("5_wo8eh")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpym1"]
atlas = ExtResource("5_wo8eh")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtjb3"]
atlas = ExtResource("6_pswr8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou1q0"]
atlas = ExtResource("6_pswr8")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhn4p"]
atlas = ExtResource("6_pswr8")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_korec"]
atlas = ExtResource("6_pswr8")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4247"]
atlas = ExtResource("6_pswr8")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7th44"]
atlas = ExtResource("6_pswr8")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg4ma"]
atlas = ExtResource("6_pswr8")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ujg"]
atlas = ExtResource("6_pswr8")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq7ps"]
atlas = ExtResource("6_pswr8")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ea4"]
atlas = ExtResource("6_pswr8")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyuk5"]
atlas = ExtResource("6_pswr8")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dby0h"]
atlas = ExtResource("6_pswr8")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnhdr"]
atlas = ExtResource("6_4bfmi")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjdxt"]
atlas = ExtResource("6_4bfmi")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q20f6"]
atlas = ExtResource("6_4bfmi")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dbgn"]
atlas = ExtResource("6_4bfmi")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_golcn"]
atlas = ExtResource("6_4bfmi")
region = Rect2(0, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_sqisb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsh6")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_opqg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftwvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrewe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l3jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53f2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1maj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk5mi")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_a3asa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4cgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr7l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ocj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e07v")
}],
"loop": false,
"name": &"Attacking",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m04ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u428p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnx06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rho2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3csd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8jwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25e2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cspye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2a3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1nba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_372fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vo1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj3tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwt0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eswps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqfwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnvf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31da1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbmlx")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62ma8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhnqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c015n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tjae")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5va66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1vj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qomn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68w0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhd8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y52g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kid7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpym1")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtjb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou1q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhn4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_korec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4247")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7th44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg4ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8ujg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq7ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3ea4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyuk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dby0h")
}],
"loop": false,
"name": &"Skill1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnhdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjdxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q20f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dbgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_golcn")
}],
"loop": true,
"name": &"Summoning",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2u1fo"]
radius = 16.8733
height = 110.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0mgd6"]
radius = 48.0
height = 136.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thjg0"]
size = Vector2(58, 113)

[sub_resource type="CircleShape2D" id="CircleShape2D_ln51t"]
radius = 575.001

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yvcxr"]
radius = 40.0
height = 128.0

[node name="Executioner" type="CharacterBody2D"]
script = ExtResource("1_hmdhw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sqisb")
animation = &"Skill1"
autoplay = "Idle"
offset = Vector2(5, 0)
script = ExtResource("8_20m8o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 11)
scale = Vector2(1.1853, 0.945832)
shape = SubResource("CapsuleShape2D_2u1fo")

[node name="Skill1_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skill1_range"]
position = Vector2(0, 6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0mgd6")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
script = ExtResource("2_yvcxr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3, 11.5)
shape = SubResource("RectangleShape2D_thjg0")

[node name="detection_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_ln51t")

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(40, 4)
shape = SubResource("CapsuleShape2D_yvcxr")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_frame_changed"]
[connection signal="body_entered" from="Skill1_range" to="." method="_on_skill_1_range_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
